force-app/main/default/objects/War_History_Entry__c/War_History_Entry__c.object-meta.xml
<CustomObject>
    <label>War History Entry</label>
    <pluralLabel>War History Entrys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>War History Entry Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>