force-app/main/default/objects/War_History_Entry__c/fields/Add_attacker__c.field-meta.xml
<CustomField>
    <fullName>Add_attacker__c</fullName>
    <label>Add attacker</label>
    <type>Text</type>
    <length>255</length>
</CustomField>