force-app/main/default/objects/War_History_Entry__c/fields/Add_defender__c.field-meta.xml
<CustomField>
    <fullName>Add_defender__c</fullName>
    <label>Add defender</label>
    <type>Text</type>
    <length>255</length>
</CustomField>