force-app/main/default/objects/War_History_Entry__c/fields/Battle__c.field-meta.xml
<CustomField>
    <fullName>Battle__c</fullName>
    <label>Battle</label>
    <type>Lookup</type>
    <referenceTo>Battle__c</referenceTo>
    <relationshipName>War_History_Entry_Battle</relationshipName>
</CustomField>