force-app/main/default/objects/War_History_Entry__c/fields/Rem_attacker__c.field-meta.xml
<CustomField>
    <fullName>Rem_attacker__c</fullName>
    <label>Rem attacker</label>
    <type>Text</type>
    <length>255</length>
</CustomField>