force-app/main/default/objects/War_History_Entry__c/fields/Rem_defender__c.field-meta.xml
<CustomField>
    <fullName>Rem_defender__c</fullName>
    <label>Rem defender</label>
    <type>Text</type>
    <length>255</length>
</CustomField>